cmake_minimum_required(VERSION 3.10)
project(cxxos)
option(LOG "Enable log" OFF)
if(LOG)
    add_compile_definitions(LOG)
endif()
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE "Release")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ")
if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
endif()

if(WIN32)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lws2_32")
endif()

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

include_directories(${PROJECT_SOURCE_DIR}/include)
add_library(Mem STATIC ${PROJECT_SOURCE_DIR}/src/Mem.cpp)
add_library(VMem STATIC ${PROJECT_SOURCE_DIR}/src/VMem.cpp)
if(WIN32)
add_library(Net STATIC ${PROJECT_SOURCE_DIR}/src/Mem.cpp ${PROJECT_SOURCE_DIR}/src/Net.cpp)
endif()
add_library(BinarySerial STATIC ${PROJECT_SOURCE_DIR}/src/BinarySerial.cpp)

add_executable(main ${PROJECT_SOURCE_DIR}/main.cpp)
target_link_libraries(main Mem VMem  BinarySerial)

if(WIN32)
    target_link_libraries(main Net ws2_32)
endif()